# u-boot-bl30-rtos_sdk-lib-libc

./: CMakeLists.txt  Kconfig
aml/: CMakeLists.txt  Kconfig  aml_atoi.c  aml_errno.c  aml_free.c  aml_free.h  aml_malloc.c  aml_malloc.h  aml_memcpy.c  aml_memcpy.h  aml_memset.c  aml_memset.h  aml_printf.c  aml_printf.h  aml_putchar.c  aml_scanf.c  aml_scanf.h  aml_strlen.c  aml_strlen.h
logbuffer/: CMakeLists.txt  Kconfig  logbuffer.c  logbuffer.h
newlib/: CMakeLists.txt  Kconfig  printk.c  printk.h  syscalls.c
test/: CMakeLists.txt  Kconfig  test_libc_chr.c  test_libc_str.c
